[package]
name = "ggpo-rs"
version = "0.1.0"
authors = ["Tyler Port <tyler274port@gmail.com>"]
edition = "2018"
description = "A reimplementation of GGPO(https://github.com/pond3r/ggpo) in Rust"
license-file = "LICENSE"
repository = "https://github.com/tyler274/ggpo-rs"
homepage = "https://github.com/tyler274/ggpo-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bit-vec = "0.6"
arraydeque = "0.4"
log = "0.4"
# serde = "1.0"
# zstd = "0.5"
libc = "0.2"
bytes = { version = "0.5", features = ["serde"] }
mio = {version = "0.7", features = ["udp"], default-features = true}
thiserror = "1.0"
# socket2 = "0.3"
# bitflags

[lib]
name = "ggpo"
crate-type = ["cdylib", "staticlib", "rlib"] 

# for examples, tests, and benches
[dev-dependencies]
tempdir = "0.3"
crc32fast = "1.2"
typed-arena = "2.0"
enumflags2 = "0.6"

[dev-dependencies.sdl2]
version = "0.34.2"
# git = "https://github.com/Rust-SDL2/rust-sdl2"
default-features = false
features = ["ttf","image","gfx","mixer","static-link","use-vcpkg", "unsafe_textures"]

[package.metadata.vcpkg]
dependencies = ["sdl2", "sdl2-image[libjpeg-turbo,tiff,libwebp]", "sdl2-ttf", "sdl2-gfx", "sdl2-mixer"]
git = "https://github.com/microsoft/vcpkg"
tag = "2020.06"


[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }
