[package]
name = "ggpo-rs"
version = "0.1.1"
authors = ["Tyler Port <tyler274port@gmail.com>"]
edition = "2018"
description = "A reimplementation of GGPO(https://github.com/pond3r/ggpo) in Rust"
license-file = "LICENSE"
repository = "https://github.com/tyler274/ggpo-rs"
homepage = "https://github.com/tyler274/ggpo-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde-big-array = "0.3"
bincode = "1.3"
zstd = "0.5"
bytes = { version = "0.5", features = ["serde"] }
async-net = "0.1"
# smol = "0.2"
blocking = "0.5"
thiserror = "1.0"
rand = "0.7"
rand_distr = "0.2"
async-mutex = "1.1"
# A stop-gap until this hard problem is solved. 
async-trait = "0.1"
# async-trait-ext = "0.2"

[lib]
name = "ggpo"
crate-type = ["cdylib", "staticlib", "rlib"] 

[profile.release]
debug = true

# for examples, tests, and benches
[dev-dependencies]
tempdir = "0.3"
crc32fast = "1.2"
# typed-arena = "2.0"
enumflags2 = "0.6"

[dev-dependencies.sdl2]
version = "^0.34.2"
# git = "https://github.com/Rust-SDL2/rust-sdl2"
default-features = false
features = ["ttf","image","gfx","mixer","static-link","use-vcpkg", "unsafe_textures"]

[package.metadata.vcpkg]
dependencies = ["sdl2", "sdl2-image[libjpeg-turbo,tiff,libwebp]", "sdl2-ttf", "sdl2-gfx", "sdl2-mixer"]
git = "https://github.com/microsoft/vcpkg"
tag = "2020.06"


[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }
