[package]
name = "ggpo-rs"
version = "0.1.3"
authors = ["Tyler Port <tyler274port@gmail.com>"]
edition = "2018"
description = "A reimplementation of GGPO(https://github.com/pond3r/ggpo) in Rust"
license = "MIT"
readme = "README.md"
repository = "https://github.com/tyler274/ggpo-rs"
homepage = "https://github.com/tyler274/ggpo-rs"
keywords = ["gamedev", "networking", "netcode", "GGPO", "rollback"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde-big-array = "0.3"
bincode = "1.3"
zstd = "0.5"
bytes = { version = "0.5", features = ["serde"] }
thiserror = "1.0"
rand = "0.7"
rand_distr = "0.2"
parking_lot = "0.11"
mio = {version = "0.7", features=["udp", "os-poll"]}
flatbuffers = "0.6"


[lib]
name = "ggpo"
crate-type = ["cdylib", "staticlib", "rlib"] 

# [profile.dev]
# lto = "thin"

[profile.release]
debug = true
# lto = "thin"

# for examples, tests, and benches
[dev-dependencies]
tempdir = "0.3"
crc32fast = "1.2"
enumflags2 = "0.6"

[target.'cfg(linux)'.dev-dependencies]
amethyst = {version ="0.15", features = ["vulkan"]}

[target.'cfg(macos)'.dev-dependencies]
amethyst = {version ="0.15", features = ["metal"]}

[target.x86_64-pc-windows-msvc.dev-dependencies]
amethyst = {version ="0.15", features = ["vulkan"]}
