[package]
name = "vectorwar_example"
version = "0.1.0"
authors = ["Tyler Port <tyler274port@gmail.com>"]
edition = "2018"


# for examples, tests, and benches
[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde-big-array = "0.3"
bytes = { version = "0.5", features = ["serde"] }
thiserror = "1.0"
parking_lot = "0.11"
tempdir = "0.3"
crc32fast = "1.2"
enumflags2 = "0.6"
amethyst = {version ="0.15"}
ggpo = {version = "0.1", path= "../../ggpo"}

[features]
default = ["vulkan"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]

# [target.'cfg(target_os = "macos")'.features]
# default = ["metal"]

# [target.'cfg(target_os = "windows")'.features]
# default = ["vulkan"]

# [target.'cfg(target_os = "linux")'.features]
# default = ["vulkan"]
